ADD: Header with navbar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
-    
+    <header class="main-header">
+         <nav class="nav"> <!--Flex container -->
+            <span>logo</span>
+            <ul class="link-list">
+                <li><a href="">Link</a></li>
+                <li><a href="">Link</li>
+                <li><a href="">Link</li>
+                <li><a href="">Link</li>
+            </ul>
+            <span>login</span>
+        </nav>
+    </header>
 </body>
 </html>
