--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
+    <!-- Creo l'header -->
     <header class="main-header">
-         <nav class="nav"> <!--Flex container -->
+         <!-- Creo la Navbar  -->
+        <nav class="nav"> <!--Flex container -->
             <span>logo</span>
             <ul class="link-list">
                 <li><a href="">Link</a></li>
@@ -19,5 +21,15 @@
             <span>login</span>
         </nav>
     </header>
+    <main>
+        <!-- Creo la prima sezione -->
+        <section class="section debug">
+            <div class="container debug bg-blue">
+              <div class="row debug">
+                <div class="col debug bg-violet">Contenuto</div> 
+              </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
