ADD: second main section NOT ENDED

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
               </div>
             </div>
         </section>
+
+        <!-- Creo la seconda sezione -->
+        <section class="section debug">
+            <div class="container-1 debug bg-white">
+              <div class="row-1 debug">
+                <div class="col w-60 debug bg-rose">Contenuto</div> 
+                <div class="col w-40 debug bg-cfblue"> Contenuto </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
